* 2022-04-04 8.0
  recipe sections can contain regular expressions
* 2022-02-22 7.1
  count render errors and output the number of problems found
* 2021-12-15 7.0.0.2
  bugfix in default contact.tpl
* 2021-10-12 7.0.0.1
  init contact templates as an empty list
* 2021-10-11 7.0
  contacts can have nagios-templates and coshsh-templates
* 2021-09-14 6.8
  add filter_neighbor_applications, applications can see each other
* 2020-07-01 6.7.0.2
  bugfix in host templates (must not be sorted)
* 2020-06-29 6.7.0.1
  output a final completion message after a recipe
* 2020-06-17 6.7
  environment variables can be set in the recipe
* 2020-01-26 6.6.3.2
  bugfix in snmpv3 security levels
* 2020-12-18 6.6.3.1
  use the effective username for prometheus labels
* 2020-11-25 6.6.3
  run git-push if the dynamic_dir has a remote
* 2020-11-23 6.6.2.4
  strip blanks from datasources list
* 2020-10-21 6.6.2.3
  make detail KEYVALUESARRAY more robust
* 2020-10-07 6.6.2.2.1
  fix a bug in items, reduce()
* 2020-10-05 6.6.2.2
  fix a bug in pushgateway (failed when no username was set)
* 2020-10-05 6.6.2.1
  fix a bug in the sort of details (compare, when monitoring_0 is a dict)
* 2020-08-06 6.6.2
  get rid of a git deprecation warning in the default datarecipient
  add option backup_count to the cookbook
* 2020-06-07 6.6.1
  add parameter backup_count
* 2020-04-23 6.0
  python3
* 2019-12-28 5.6.0.1
  remove an unnecessary error message
* 2019-12-06 5.6
  dont log planned exceptions
  rm duplicate service dependency in os_windows_default.tpl
  contacts can have custom_macros
* 2019-04-04 5.5
  log exceptions
* 2019-03-21 5.4.0.1
  remove empty pid-files
* 2019-03-06 5.4
  datasource names in filters can be regular expressions
* 2018-12-07 5.3.1.1
  bugfix in detail NAGIOSCONF and filter_service
* 2018-11-19 5.3.1
  add function environ()
* 2018-11-19 5.3
  allow more than one cookbook
* 2018-11-15 5.2
  datasource_csv replaces env macros in input lines